@@ -1,0 +1,2 @@
+products:
+  number_items: 1
