@@ -3,7 +3,7 @@
 /**
  * This update executes a reinstall of Products module
  */
-function products_update_8001() {
+function products_update_8011() {
   $modules = [
     'products',
   ];
