@@ -1,0 +1,17 @@
+<?php
+
+namespace Drupal\products\Services;
+
+/**
+ * Class CurrencyService.
+ */
+class CurrencyService implements CurrencyServiceInterface {
+
+  /**
+   * Constructs a new CurrencyService object.
+   */
+  public function __construct() {
+
+  }
+
+}
