@@ -1,0 +1,11 @@
+<?php
+
+namespace Drupal\products\Services;
+
+/**
+ * Interface CurrencyServiceInterface.
+ */
+interface CurrencyServiceInterface {
+
+
+}
